--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <!--return uplevel-->
 <% include ../partials/header %>
-
+<link rel="stylesheet" href="/stylesheets/show.css">
 
 <div class = "container">
     <header class = "jumbotron">
@@ -16,7 +16,7 @@
             <% campgrounds.forEach(function(campground){ %>
             <div class = "col-md-3 col-sm-6">
                 <div class = "thumbnail">
-                     <img src = "<%= campground.image %>">
+                    <div><img id = "imgid" src = "<%= campground.image %>"></div>
                      <div class = "caption">
                          <h4><%= campground.name %></h4>
                      </div>
